/* eslint-disable @typescript-eslint/ban-ts-comment */
import renderWithTheme from '../../../../_helpers/testing/renderWithTheme.web';
import BaseButton from '../BaseButton';

beforeAll(() => jest.spyOn(console, 'error').mockImplementation());
afterAll(() => jest.restoreAllMocks());

describe('<BaseButton />', () => {
  it('should render button with default properties', () => {
    const buttonText = 'Pay Now';
    const { container, getByText, getByRole } = renderWithTheme(
      <BaseButton>{buttonText}</BaseButton>,
    );
    expect(container).toMatchSnapshot();
    expect(getByRole('button')).toBeInTheDocument();
    expect(getByText('Pay Now')).toBeInTheDocument();
  });
  it('should throw an error when there is no icon or text passed to the button', () => {
    try {
      // @ts-expect-error
      renderWithTheme(<BaseButton />);
    } catch (error: unknown) {
      if (error instanceof Error) {
        expect(error.message).toEqual(
          `[Blade: BaseButton]: Cannot render a BaseButton without an icon or text`,
        );
      }
    }
  });
  it('should render large size button', () => {
    const buttonText = 'Pay Now';
    const { container } = renderWithTheme(<BaseButton size="large">{buttonText}</BaseButton>);
    expect(container).toMatchSnapshot();
  });
  it('should render medium size button', () => {
    const buttonText = 'Pay Now';
    const { container } = renderWithTheme(<BaseButton size="medium">{buttonText}</BaseButton>);
    expect(container).toMatchSnapshot();
  });
  it('should render small size button', () => {
    const buttonText = 'Pay Now';
    const { container } = renderWithTheme(<BaseButton size="small">{buttonText}</BaseButton>);
    expect(container).toMatchSnapshot();
  });
  it('should render xsmall size button', () => {
    const buttonText = 'Pay Now';
    const { container } = renderWithTheme(<BaseButton size="xsmall">{buttonText}</BaseButton>);
    expect(container).toMatchSnapshot();
  });
});
