// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseButton /> should render button with default properties 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 dlKgVi"
    color="hsla(213, 89%, 56%, 1)"
  >
    <div
      class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 faquWx BaseButton__StyledBaseText-zf1huq-0 cFreCU"
      color="hsla(0, 0%, 100%, 1)"
      font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
      font-size="0.875rem"
      font-style="normal"
      font-weight="700"
    >
      Pay Now
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render large size button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 kuUqri"
    color="hsla(213, 89%, 56%, 1)"
  >
    <div
      class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 hvBMXx BaseButton__StyledBaseText-zf1huq-0 cFreCU"
      color="hsla(0, 0%, 100%, 1)"
      font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
      font-size="1rem"
      font-style="normal"
      font-weight="700"
    >
      Pay Now
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render medium size button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 dlKgVi"
    color="hsla(213, 89%, 56%, 1)"
  >
    <div
      class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 faquWx BaseButton__StyledBaseText-zf1huq-0 cFreCU"
      color="hsla(0, 0%, 100%, 1)"
      font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
      font-size="0.875rem"
      font-style="normal"
      font-weight="700"
    >
      Pay Now
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render small size button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 jhRCeH"
    color="hsla(213, 89%, 56%, 1)"
  >
    <div
      class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 iFjPgh BaseButton__StyledBaseText-zf1huq-0 cFreCU"
      color="hsla(0, 0%, 100%, 1)"
      font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
      font-size="0.75rem"
      font-style="normal"
      font-weight="700"
    >
      Pay Now
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render xsmall size button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 iAeiNo"
    color="hsla(213, 89%, 56%, 1)"
  >
    <div
      class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 iFjPgh BaseButton__StyledBaseText-zf1huq-0 cFreCU"
      color="hsla(0, 0%, 100%, 1)"
      font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
      font-size="0.75rem"
      font-style="normal"
      font-weight="700"
    >
      PAY NOW
    </div>
  </button>
</div>
`;
